force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Dependent_User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__Dependent_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User Story that is dependent on the completion of the parent user story.</description>
    <inlineHelpText>The User Story that is dependent on the completion of the specified deliverable.</inlineHelpText>
    <label>Child User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Parent User Stories</relationshipLabel>
    <relationshipName>Team_Dependencies_For_UStory</relationshipName>
    <type>Lookup</type>
</CustomField>